Align product styles, fix links, update currency to HKD and adjust prices

--- a/homepage.test/index.css
+++ b/homepage.test/index.css
@@ -618,6 +618,14 @@ h3 {
     color: var(--color-primary-dark);
 }
 
+.product-unit {
+    color: #888;
+    font-size: 0.75em;
+    font-weight: 400;
+    margin-left: 4px;
+    vertical-align: middle;
+}
+
 .product-action {
     width: 45px;
     height: 45px;
